Bug 344915 - OpenRouteService routing service stopped working with Marble
Summary: OpenRouteService routing service stopped working with Marble
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.9 (KDE 4.14)
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dennis Nienhüser
URL: http://openrouteservice.org/contact.html
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-06 20:30 UTC by Łukasz
Modified: 2015-06-25 18:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications/14.12.4
Sentry Crash Report:
nienhueser: Backport+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Łukasz 2015-03-06 20:30:13 UTC
Each time I try to find a route between two points with OpenRouteService, I get "No route found" message. Other services work alright. I don't use an offline mode.

I verified if that's a problem with OpenRouteService itself, but http://openrouteservice.org/ works fine for the same regions (tested regions in Germany and Poland). The ORS/Marble used to work fine previously with occasional "No route found" messages, but those were rare. Now it stopped working completely, unfortunately I cannot pinpoint exact date/version when it happened. I tested various configuration options for ORS (car, bicycle, pedestrian), to no avail.

Reproducible: Always

Steps to Reproduce:
1. Mark to points in Marble in Europe, where ORS works fine.
2. Try to find a route for a car/bicycle/pedestrian.

Actual Results:  
"No route found" error.

Expected Results:  
Display a route with timing.

Fedora 20
3.16.4-200.fc20.x86_64
Marble Virtual Globe
Version 1.9.95 (1.10 Beta 3)
Using KDE Development Platform 4.14.4
Comment 1 Dennis Nienhüser 2015-04-05 15:25:33 UTC
Thanks for reporting. Seems they changed their API URL.
Comment 2 Dennis Nienhüser 2015-04-05 15:30:35 UTC
Git commit 5e5915f096611e27212064dc96cc9c4cb7991550 by Dennis Nienhüser.
Committed on 05/04/2015 at 15:29.
Pushed by nienhueser into branch 'master'.

openrouteservice.org has changed their API URL, follow up.

Also parse their new 'Turn'... style route directions (i.e. show a
turn type symbol for those instructions instead of the generic icon)

M  +2    -2    src/plugins/runner/openrouteservice/OpenRouteServiceRunner.cpp

http://commits.kde.org/marble/5e5915f096611e27212064dc96cc9c4cb7991550
Comment 3 Dennis Nienhüser 2015-04-05 19:20:22 UTC
Git commit 3591a0495486777ecf52e51344dd5ff1286a0ab9 by Dennis Nienhüser.
Committed on 05/04/2015 at 19:19.
Pushed by nienhueser into branch 'Applications/15.04'.

openrouteservice.org has changed their API URL, follow up.

Also parse their new 'Turn'... style route directions (i.e. show a
turn type symbol for those instructions instead of the generic icon)
(cherry picked from commit 5e5915f096611e27212064dc96cc9c4cb7991550)

M  +2    -2    src/plugins/runner/openrouteservice/OpenRouteServiceRunner.cpp

http://commits.kde.org/marble/3591a0495486777ecf52e51344dd5ff1286a0ab9
Comment 4 Dennis Nienhüser 2015-04-05 19:32:08 UTC
Git commit e5c8990b2fc46fb64e14b14390534155f4608946 by Dennis Nienhüser.
Committed on 05/04/2015 at 19:26.
Pushed by nienhueser into branch 'Applications/14.12'.

openrouteservice.org has changed their API URL, follow up.

Also parse their new 'Turn'... style route directions (i.e. show a
turn type symbol for those instructions instead of the generic icon)
FIXED-IN: Applications/14.12.4
(cherry picked from commit 5e5915f096611e27212064dc96cc9c4cb7991550)

M  +2    -2    src/plugins/runner/openrouteservice/OpenRouteServiceRunner.cpp

http://commits.kde.org/marble/e5c8990b2fc46fb64e14b14390534155f4608946
Comment 5 danifavi 2015-04-19 16:32:51 UTC
I'm working with OpenSUSE13.1 KDE 4.11.5, and I have no file " src/plugins/runner/openrouteservice/OpenRouteServiceRunner.cpp".

A new version of Marble for this platform will be published with this bug fix?
or do I have to modify the API URL manually? But I don't know how to do it...
Thanks
Comment 6 Morten Lind 2015-06-25 11:15:30 UTC
This issue persists. OpenRouteService still consistently returns "No route found" in my installation. What release should this have been fixed in? Or is this a new API change on ORS's part?

I am on Debian with Marble 1.9.2 and KDE 4.14.2.
Comment 7 Dennis Nienhüser 2015-06-25 17:48:58 UTC
It is fixed in Marble 1.10.4, so you need a newer version. You could also ask the Debian maintainers to backport the patch, it is an easy fix.
Comment 8 Morten Lind 2015-06-25 18:00:41 UTC
Thanks a lot for the information. I will wait around for a while, before contacting the Debian package maintainer.

(In reply to Dennis Nienhüser from comment #7)
> It is fixed in Marble 1.10.4, so you need a newer version. You could also
> ask the Debian maintainers to backport the patch, it is an easy fix.