openrouteservice.org has changed their API URL, follow up.

Also parse their new 'Turn'... style route directions (i.e. show a
turn type symbol for those instructions instead of the generic icon)

BUG: 344915
FIXED-IN: Applications/14.12.4
(cherry picked from commit 5e5915f096611e27212064dc96cc9c4cb7991550)